--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 #端口
-server.port=8080
+server.port=8081
 
 #集成mysql数据库的配置
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #先创建名字为"onlinegame"的数据库，再用sql文件建表
-spring.datasource.url=jdbc:mysql://49.235.35.92:3306/onlinegame?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/onlinegame?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/onlinegame?useSSL=false&useUnicode=true&characterEncoding=utf-8&nullCatalogMeansCurrent=true&autoReconnect=true&serverTimezone=Asia/Shanghai
 #修改成你的数据库用户名和密码
 spring.datasource.username=root
 spring.datasource.password=123456
